lib/ChefParser.js
// Generated from Chef.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ChefListener = require('./ChefListener').ChefListener;
var grammarFileName = "Chef.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'Ingredients.'", "'heaped'", "'level'", "'g'", 
                     "'kg'", "'pinch'", "'pinches'", "'ml'", "'l'", "'dash'", 
                     "'dashes'", "'cup'", "'cups'", "'teaspoon'", "'teaspoons'", 
                     "'tablespoon'", "'tablespoons'", "'Method.'", "'Take'", 
                     "'from refrigerator.'", "'Put'", "'into'", "'the'", 
                     "'mixing bowl.'", "'Fold'", "'Add'", "'to'", "'mixing bowl'", 
                     "'Remove'", "'from'", "'Combine'", "'Divide'", "'Add dry ingredients'", 
                     "'Liquefy'", "'Liquify'", "'contents of'", "'Stir'", 
                     "'for'", "'minutes.'", "'Mix'", "'well.'", "'Clean'", 
                     "'Pour contents of'", "'mixing bowl into'", "'baking dish.'", 
                     "'until'", "'Set aside.'", "'Serve with'", "'Refrigerate'", 
                     "'hours'", "'st'", "'nd'", "'rd'", "'th'", "'Serves'", 
                     "'ed'", null, null, "'.'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "WORD", "INT", "PERIOD", "NEWLINE", 
                      "WS" ];

var ruleNames =  [ "program", "recipe", "auxiliary", "title", "comments", 
                   "ingredients", "ingredient", "measureType", "measure", 
                   "dryMeasure", "liquidMeasure", "unknownMeasure", "ingredientLabel", 
                   "method", "statement", "stdin", "put", "fold", "add", 
                   "remove", "combine", "divide", "addDry", "liquefyIngredient", 
                   "liquefy", "stirBowl", "stir", "mix", "clean", "pour", 
                   "loopStart", "loopEnd", "setAside", "serveWith", "refrigerate", 
                   "nth", "pth", "serves", "number", "divider", "verb", 
                   "verbed" ];

function ChefParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ChefParser.prototype = Object.create(antlr4.Parser.prototype);
ChefParser.prototype.constructor = ChefParser;

Object.defineProperty(ChefParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ChefParser.EOF = antlr4.Token.EOF;
ChefParser.T__0 = 1;
ChefParser.T__1 = 2;
ChefParser.T__2 = 3;
ChefParser.T__3 = 4;
ChefParser.T__4 = 5;
ChefParser.T__5 = 6;
ChefParser.T__6 = 7;
ChefParser.T__7 = 8;
ChefParser.T__8 = 9;
ChefParser.T__9 = 10;
ChefParser.T__10 = 11;
ChefParser.T__11 = 12;
ChefParser.T__12 = 13;
ChefParser.T__13 = 14;
ChefParser.T__14 = 15;
ChefParser.T__15 = 16;
ChefParser.T__16 = 17;
ChefParser.T__17 = 18;
ChefParser.T__18 = 19;
ChefParser.T__19 = 20;
ChefParser.T__20 = 21;
ChefParser.T__21 = 22;
ChefParser.T__22 = 23;
ChefParser.T__23 = 24;
ChefParser.T__24 = 25;
ChefParser.T__25 = 26;
ChefParser.T__26 = 27;
ChefParser.T__27 = 28;
ChefParser.T__28 = 29;
ChefParser.T__29 = 30;
ChefParser.T__30 = 31;
ChefParser.T__31 = 32;
ChefParser.T__32 = 33;
ChefParser.T__33 = 34;
ChefParser.T__34 = 35;
ChefParser.T__35 = 36;
ChefParser.T__36 = 37;
ChefParser.T__37 = 38;
ChefParser.T__38 = 39;
ChefParser.T__39 = 40;
ChefParser.T__40 = 41;
ChefParser.T__41 = 42;
ChefParser.T__42 = 43;
ChefParser.T__43 = 44;
ChefParser.T__44 = 45;
ChefParser.T__45 = 46;
ChefParser.T__46 = 47;
ChefParser.T__47 = 48;
ChefParser.T__48 = 49;
ChefParser.T__49 = 50;
ChefParser.T__50 = 51;
ChefParser.T__51 = 52;
ChefParser.T__52 = 53;
ChefParser.T__53 = 54;
ChefParser.T__54 = 55;
ChefParser.T__55 = 56;
ChefParser.WORD = 57;
ChefParser.INT = 58;
ChefParser.PERIOD = 59;
ChefParser.NEWLINE = 60;
ChefParser.WS = 61;

ChefParser.RULE_program = 0;
ChefParser.RULE_recipe = 1;
ChefParser.RULE_auxiliary = 2;
ChefParser.RULE_title = 3;
ChefParser.RULE_comments = 4;
ChefParser.RULE_ingredients = 5;
ChefParser.RULE_ingredient = 6;
ChefParser.RULE_measureType = 7;
ChefParser.RULE_measure = 8;
ChefParser.RULE_dryMeasure = 9;
ChefParser.RULE_liquidMeasure = 10;
ChefParser.RULE_unknownMeasure = 11;
ChefParser.RULE_ingredientLabel = 12;
ChefParser.RULE_method = 13;
ChefParser.RULE_statement = 14;
ChefParser.RULE_stdin = 15;
ChefParser.RULE_put = 16;
ChefParser.RULE_fold = 17;
ChefParser.RULE_add = 18;
ChefParser.RULE_remove = 19;
ChefParser.RULE_combine = 20;
ChefParser.RULE_divide = 21;
ChefParser.RULE_addDry = 22;
ChefParser.RULE_liquefyIngredient = 23;
ChefParser.RULE_liquefy = 24;
ChefParser.RULE_stirBowl = 25;
ChefParser.RULE_stir = 26;
ChefParser.RULE_mix = 27;
ChefParser.RULE_clean = 28;
ChefParser.RULE_pour = 29;
ChefParser.RULE_loopStart = 30;
ChefParser.RULE_loopEnd = 31;
ChefParser.RULE_setAside = 32;
ChefParser.RULE_serveWith = 33;
ChefParser.RULE_refrigerate = 34;
ChefParser.RULE_nth = 35;
ChefParser.RULE_pth = 36;
ChefParser.RULE_serves = 37;
ChefParser.RULE_number = 38;
ChefParser.RULE_divider = 39;
ChefParser.RULE_verb = 40;
ChefParser.RULE_verbed = 41;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.recipe = function() {
    return this.getTypedRuleContext(RecipeContext,0);
};

ProgramContext.prototype.serves = function() {
    return this.getTypedRuleContext(ServesContext,0);
};

ProgramContext.prototype.EOF = function() {
    return this.getToken(ChefParser.EOF, 0);
};

ProgramContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.NEWLINE);
    } else {
        return this.getToken(ChefParser.NEWLINE, i);
    }
};


ProgramContext.prototype.auxiliary = function() {
    return this.getTypedRuleContext(AuxiliaryContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitProgram(this);
	}
};




ChefParser.ProgramContext = ProgramContext;

ChefParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ChefParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.recipe();
        this.state = 85;
        this.serves();
        this.state = 88;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        if(la_===1) {
            this.state = 86;
            this.match(ChefParser.NEWLINE);
            this.state = 87;
            this.auxiliary();

        }
        this.state = 91;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.NEWLINE) {
            this.state = 90;
            this.match(ChefParser.NEWLINE);
        }

        this.state = 93;
        this.match(ChefParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function RecipeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_recipe;
    return this;
}

RecipeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RecipeContext.prototype.constructor = RecipeContext;

RecipeContext.prototype.title = function() {
    return this.getTypedRuleContext(TitleContext,0);
};

RecipeContext.prototype.ingredients = function() {
    return this.getTypedRuleContext(IngredientsContext,0);
};

RecipeContext.prototype.method = function() {
    return this.getTypedRuleContext(MethodContext,0);
};

RecipeContext.prototype.comments = function() {
    return this.getTypedRuleContext(CommentsContext,0);
};

RecipeContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterRecipe(this);
	}
};

RecipeContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitRecipe(this);
	}
};




ChefParser.RecipeContext = RecipeContext;

ChefParser.prototype.recipe = function() {

    var localctx = new RecipeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ChefParser.RULE_recipe);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.title();
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.NEWLINE) {
            this.state = 96;
            this.comments();
        }

        this.state = 99;
        this.ingredients();
        this.state = 100;
        this.method();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AuxiliaryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_auxiliary;
    return this;
}

AuxiliaryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AuxiliaryContext.prototype.constructor = AuxiliaryContext;

AuxiliaryContext.prototype.recipe = function() {
    return this.getTypedRuleContext(RecipeContext,0);
};

AuxiliaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterAuxiliary(this);
	}
};

AuxiliaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitAuxiliary(this);
	}
};




ChefParser.AuxiliaryContext = AuxiliaryContext;

ChefParser.prototype.auxiliary = function() {

    var localctx = new AuxiliaryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ChefParser.RULE_auxiliary);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.recipe();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TitleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_title;
    return this;
}

TitleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TitleContext.prototype.constructor = TitleContext;

TitleContext.prototype.PERIOD = function() {
    return this.getToken(ChefParser.PERIOD, 0);
};

TitleContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

TitleContext.prototype.WORD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.WORD);
    } else {
        return this.getToken(ChefParser.WORD, i);
    }
};


TitleContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterTitle(this);
	}
};

TitleContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitTitle(this);
	}
};




ChefParser.TitleContext = TitleContext;

ChefParser.prototype.title = function() {

    var localctx = new TitleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ChefParser.RULE_title);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 104;
            this.match(ChefParser.WORD);
            this.state = 107; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===ChefParser.WORD);
        this.state = 109;
        this.match(ChefParser.PERIOD);
        this.state = 110;
        this.match(ChefParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CommentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_comments;
    return this;
}

CommentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentsContext.prototype.constructor = CommentsContext;

CommentsContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

CommentsContext.prototype.divider = function() {
    return this.getTypedRuleContext(DividerContext,0);
};

CommentsContext.prototype.WORD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.WORD);
    } else {
        return this.getToken(ChefParser.WORD, i);
    }
};


CommentsContext.prototype.INT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.INT);
    } else {
        return this.getToken(ChefParser.INT, i);
    }
};


CommentsContext.prototype.PERIOD = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(ChefParser.PERIOD);
    } else {
        return this.getToken(ChefParser.PERIOD, i);
    }
};


CommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterComments(this);
	}
};

CommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitComments(this);
	}
};




ChefParser.CommentsContext = CommentsContext;

ChefParser.prototype.comments = function() {

    var localctx = new CommentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ChefParser.RULE_comments);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 112;
        this.match(ChefParser.NEWLINE);
        this.state = 114; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 113;
            _la = this._input.LA(1);
            if(!(((((_la - 57)) & ~0x1f) == 0 && ((1 << (_la - 57)) & ((1 << (ChefParser.WORD - 57)) | (1 << (ChefParser.INT - 57)) | (1 << (ChefParser.PERIOD - 57)))) !== 0))) {
            this._errHandler.recoverInline(this);
            }
            else {
            	this._errHandler.reportMatch(this);
                this.consume();
            }
            this.state = 116; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 57)) & ~0x1f) == 0 && ((1 << (_la - 57)) & ((1 << (ChefParser.WORD - 57)) | (1 << (ChefParser.INT - 57)) | (1 << (ChefParser.PERIOD - 57)))) !== 0));
        this.state = 118;
        this.divider();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IngredientsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_ingredients;
    return this;
}

IngredientsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IngredientsContext.prototype.constructor = IngredientsContext;

IngredientsContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

IngredientsContext.prototype.ingredient = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IngredientContext);
    } else {
        return this.getTypedRuleContext(IngredientContext,i);
    }
};

IngredientsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterIngredients(this);
	}
};

IngredientsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitIngredients(this);
	}
};




ChefParser.IngredientsContext = IngredientsContext;

ChefParser.prototype.ingredients = function() {

    var localctx = new IngredientsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ChefParser.RULE_ingredients);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(ChefParser.T__0);
        this.state = 121;
        this.match(ChefParser.NEWLINE);
        this.state = 123; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 122;
            this.ingredient();
            this.state = 125; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__1) | (1 << ChefParser.T__2) | (1 << ChefParser.T__3) | (1 << ChefParser.T__4) | (1 << ChefParser.T__5) | (1 << ChefParser.T__6) | (1 << ChefParser.T__7) | (1 << ChefParser.T__8) | (1 << ChefParser.T__9) | (1 << ChefParser.T__10) | (1 << ChefParser.T__11) | (1 << ChefParser.T__12) | (1 << ChefParser.T__13) | (1 << ChefParser.T__14) | (1 << ChefParser.T__15) | (1 << ChefParser.T__16))) !== 0) || _la===ChefParser.WORD || _la===ChefParser.INT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IngredientContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_ingredient;
    return this;
}

IngredientContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IngredientContext.prototype.constructor = IngredientContext;

IngredientContext.prototype.ingredientLabel = function() {
    return this.getTypedRuleContext(IngredientLabelContext,0);
};

IngredientContext.prototype.NEWLINE = function() {
    return this.getToken(ChefParser.NEWLINE, 0);
};

IngredientContext.prototype.INT = function() {
    return this.getToken(ChefParser.INT, 0);
};

IngredientContext.prototype.measureType = function() {
    return this.getTypedRuleContext(MeasureTypeContext,0);
};

IngredientContext.prototype.measure = function() {
    return this.getTypedRuleContext(MeasureContext,0);
};

IngredientContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterIngredient(this);
	}
};

IngredientContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitIngredient(this);
	}
};




ChefParser.IngredientContext = IngredientContext;

ChefParser.prototype.ingredient = function() {

    var localctx = new IngredientContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ChefParser.RULE_ingredient);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 128;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.INT) {
            this.state = 127;
            this.match(ChefParser.INT);
        }

        this.state = 131;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ChefParser.T__1 || _la===ChefParser.T__2) {
            this.state = 130;
            this.measureType();
        }

        this.state = 134;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << ChefParser.T__3) | (1 << ChefParser.T__4) | (1 << ChefParser.T__5) | (1 << ChefParser.T__6) | (1 << ChefParser.T__7) | (1 << ChefParser.T__8) | (1 << ChefParser.T__9) | (1 << ChefParser.T__10) | (1 << ChefParser.T__11) | (1 << ChefParser.T__12) | (1 << ChefParser.T__13) | (1 << ChefParser.T__14) | (1 << ChefParser.T__15) | (1 << ChefParser.T__16))) !== 0)) {
            this.state = 133;
            this.measure();
        }

        this.state = 136;
        this.ingredientLabel();
        this.state = 137;
        this.match(ChefParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MeasureTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_measureType;
    return this;
}

MeasureTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MeasureTypeContext.prototype.constructor = MeasureTypeContext;


MeasureTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterMeasureType(this);
	}
};

MeasureTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitMeasureType(this);
	}
};




ChefParser.MeasureTypeContext = MeasureTypeContext;

ChefParser.prototype.measureType = function() {

    var localctx = new MeasureTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ChefParser.RULE_measureType);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 139;
        _la = this._input.LA(1);
        if(!(_la===ChefParser.T__1 || _la===ChefParser.T__2)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_measure;
    return this;
}

MeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MeasureContext.prototype.constructor = MeasureContext;

MeasureContext.prototype.dryMeasure = function() {
    return this.getTypedRuleContext(DryMeasureContext,0);
};

MeasureContext.prototype.liquidMeasure = function() {
    return this.getTypedRuleContext(LiquidMeasureContext,0);
};

MeasureContext.prototype.unknownMeasure = function() {
    return this.getTypedRuleContext(UnknownMeasureContext,0);
};

MeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterMeasure(this);
	}
};

MeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitMeasure(this);
	}
};




ChefParser.MeasureContext = MeasureContext;

ChefParser.prototype.measure = function() {

    var localctx = new MeasureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, ChefParser.RULE_measure);
    try {
        this.state = 144;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ChefParser.T__3:
        case ChefParser.T__4:
        case ChefParser.T__5:
        case ChefParser.T__6:
            this.enterOuterAlt(localctx, 1);
            this.state = 141;
            this.dryMeasure();
            break;
        case ChefParser.T__7:
        case ChefParser.T__8:
        case ChefParser.T__9:
        case ChefParser.T__10:
            this.enterOuterAlt(localctx, 2);
            this.state = 142;
            this.liquidMeasure();
            break;
        case ChefParser.T__11:
        case ChefParser.T__12:
        case ChefParser.T__13:
        case ChefParser.T__14:
        case ChefParser.T__15:
        case ChefParser.T__16:
            this.enterOuterAlt(localctx, 3);
            this.state = 143;
            this.unknownMeasure();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DryMeasureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ChefParser.RULE_dryMeasure;
    return this;
}

DryMeasureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DryMeasureContext.prototype.constructor = DryMeasureContext;


DryMeasureContext.prototype.enterRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.enterDryMeasure(this);
	}
};

DryMeasureContext.prototype.exitRule = function(listener) {
    if(listener instanceof ChefListener ) {
        listener.exitDryMeasure(this);
	}
};




ChefParser.DryMeasureContext = DryMeasureContext;

ChefParser.prototype.dryMeasure = function() {
